hphp/hack/test/typecheck/lambda/lambda_infer_bad_return.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function foo(): (function(int): string) {
  return $x ==> true;
}
